# syllabize-es

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: char_util.rs  lib.rs  str_util.rs  syllable.rs
tests/: rhyme.rs  split.rs  stress.rs  syllabize.rs
