cargo-features = ["edition2021"]
[package]
name = "syllabize-es"
version = "0.4.0"
authors = ["Weiwei Wang <gastlygem@gmail.com"]
edition = "2021"
license = "MIT"
description = "Syllabize Spanish text, and much more"
repository = "https://github.com/weiwei/syllabize-es"
documentation = "https://docs.rs/syllabize-es"
readme = "README.md"
keywords = ["syllabize", "spanish", "text", "syllable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"